; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_fault.c_vm_fault_copy_dst_cleanup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_fault.c_vm_fault_copy_dst_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_PAGE_NULL = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @vm_fault_copy_dst_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vm_fault_copy_dst_cleanup(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @VM_PAGE_NULL, align 8
  %6 = icmp ne i64 %4, %5
  br i1 %6, label %7, label %21

7:                                                ; preds = %1
  %8 = load i64, i64* %2, align 8
  %9 = call i32 @VM_PAGE_OBJECT(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @vm_object_lock(i32 %10)
  %12 = call i32 (...) @vm_page_lockspin_queues()
  %13 = load i64, i64* %2, align 8
  %14 = load i32, i32* @TRUE, align 4
  %15 = call i32 @vm_page_unwire(i64 %13, i32 %14)
  %16 = call i32 (...) @vm_page_unlock_queues()
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @vm_object_paging_end(i32 %17)
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @vm_object_unlock(i32 %19)
  br label %21

21:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @VM_PAGE_OBJECT(i64) #1

declare dso_local i32 @vm_object_lock(i32) #1

declare dso_local i32 @vm_page_lockspin_queues(...) #1

declare dso_local i32 @vm_page_unwire(i64, i32) #1

declare dso_local i32 @vm_page_unlock_queues(...) #1

declare dso_local i32 @vm_object_paging_end(i32) #1

declare dso_local i32 @vm_object_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
